--- a/app/src/main/res/layout/viewpager_vd_vd.xml
+++ b/app/src/main/res/layout/viewpager_vd_vd.xml
@@ -7,8 +7,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/vd_title_layout">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
