修复推荐点击刷新按钮，修复长按取消收藏功能

--- a/app/src/main/res/layout/widget_recommend_update.xml
+++ b/app/src/main/res/layout/widget_recommend_update.xml
@@ -3,10 +3,10 @@
     android:id="@+id/widget_recommend_update_lay"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    android:background="?android:attr/selectableItemBackground"
-    android:gravity="center_vertical"
+    android:gravity="center"
     android:orientation="horizontal"
     android:paddingBottom="6dp"
     android:paddingLeft="21dp"
