封装视频、收藏视频、视频相关视频api，adapter和model

--- a/app/src/main/res/layout/widget_ranking_pickup.xml
+++ b/app/src/main/res/layout/widget_ranking_pickup.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:background="@color/ranking_rank_1_start"
     android:paddingLeft="19dp"
-    android:paddingRight="19dp">
+    android:paddingRight="19dp"
+    android:paddingTop="4dp">
 
     <LinearLayout
         android:id="@+id/rk_pu_date"
