--- a/app/src/main/res/layout/item_favor_video.xml
+++ b/app/src/main/res/layout/item_favor_video.xml
@@ -52,13 +52,28 @@
             android:layout_height="wrap_content"
             android:textSize="10sp" />
 
-        <TextView
-            android:id="@+id/vid_play"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textSize="10sp" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/vid_play"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textSize="10sp" />
+
+            <TextView
+                android:id="@+id/vid_danmaku"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textSize="10sp" />
+        </LinearLayout>
 
     </LinearLayout>
 
